Thu Sep  9 13:58:56 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (ip_init): change flag value for setting 
	  'argv' and 'argv0' variable

	* ext/tk/lib/remote-tk.rb: follow changes of multi-tk.rb

Thu Sep  9 11:46:18 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::do_classes): Allow
	  spaces aroun parameter to define_method_under (James Buck)

Wed Sep  8 18:44:03 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_write): zero fill a gap if exsts.
	  [ruby-dev:24190]

Wed Sep  8 15:19:49 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (ip_init): cannot create a IP at level 4

	* ext/tk/lib/multi-tk.rb: improve 'exit' operation, security check,
	  and error treatment

	* ext/tk/lib/multi-tk.rb: allow a trusted slave IP to create slave IPs

	* ext/tk/lib/tk/listbox.rb: add TkListbox#value, value=, clear,	and
	  erase

	* ext/tk/lib/tk/text.rb: add TkText#clear and erase

Tue Sep  7 12:48:22 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* {bcc32,win32,wince}/Makefile.sub (config.h): add fcntl.

	* win32/win32.[ch] (fcntl): ditto.

	* win32/win32.c (rb_w32_connect): support nonblocking mode.

	* ext/socket/socket.c (wait_connectable, ruby_connect): support
	  nonblocking connect on various platforms.

Mon Sep  6 10:57:40 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/lib/tk/menu.rb(TkOptionMenubutton#insert): call correct method

Mon Sep  6 07:51:42 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (cvar_cbase): singletons should refer outer cvar scope.
	  [ruby-dev:24223]

	* eval.c (rb_load): should preserve previous ruby_wrapper value.
	  [ruby-dev:24226]

Sat Sep  4 01:14:57 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (cvar_cbase): class variables cause SEGV in
	  instance_eval() for fixnums and symbols. [ruby-dev:24213]

Fri Sep  3 17:47:58 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>
